# AdventOfCode

./: .editorconfig  .gitignore  AdventOfCode.sln
.run/: Day 1.run.xml  Day 2.run.xml  Day 3.run.xml  Day 4.run.xml  Day 5.run.xml
2024/C#/Day1/: Day1.csproj  InputReader.cs  Program.cs
2024/C#/Day2/: Day2.csproj  InputReader.cs  Program.cs  StatusCodeChecker.cs
2024/C#/Day3/: Day3.csproj  InputReader.cs  Program.cs
2024/C#/Day4/: Day4.csproj  InputReader.cs  Program.cs
2024/C#/Day5/: Day5.csproj  InputReader.cs  Program.cs
2024/C#/Shared/: Shared.projitems  Shared.shproj  SortMethods.cs
2024/Day_1/: day_1_1.py  day_1_2.py
2024/Day_10/: day_10_1.py  day_10_2.py
2024/Day_11/: day_11_1.py
2024/Day_12/ConsoleApp1/: ConsoleApp1.sln  Day_12.csproj  Garden.cs  Program.cs
2024/Day_12/ConsoleApp1/Properties/: AssemblyInfo.cs
2024/Day_2/: day_2_1.py  day_2_2.py
2024/Day_3/: day_3_1.py  day_3_2.py
2024/Day_4/: day_4_1.py  day_4_2.py
2024/Day_5/: day_5_1.py  day_5_2.py
2024/Day_6/: day_6_1.py
2024/Day_7/: day_7_1.c  day_7_2.c
2024/Day_8/: day_8_1.py  day_8_2.py
2024/Day_9/Day_9/src/: Day_9_1.java  Day_9_2.java
2024/rust/: .editorconfig  Cargo.toml
2024/rust/.run/: Run Day10.run.xml
2024/rust/Day10/: Cargo.toml
2024/rust/Day10/src/: input.rs  main.rs  unchecked.rs
